fix header go behind image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 .container {
   width: 1135px;
   margin: 0 auto;
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
 }
 a {
   color: inherit;
@@ -56,6 +56,7 @@ header {
   width: 100%;
   top: 0;
   background-color: white;
+  z-index: 1;
 }
 
 /* TODO: CENTER IMAGE Y-AXIS */
